force-app/main/default/objects/Reporting_Snapshots__c/Reporting_Snapshots__c.object-meta.xml
<CustomObject>
    <description>This object  store the records loaded from the source report, which will be used in the historical snapshots.</description>
    <label>Reporting Snapshots</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Reporting Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>