force-app/main/default/objects/Reporting_Snapshots__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Name of the Account(Mapped from Account) -- PM-377/PM-378</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>