force-app/main/default/objects/Reporting_Snapshots__c/fields/Accountid_18_Char_id__c.field-meta.xml
<CustomField>
    <fullName>Accountid_18_Char_id__c</fullName>
    <description>Id of the Account -- PM-377/PM-378</description>
    <label>Accountid 18 Char id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>