force-app/main/default/objects/Reporting_Snapshots__c/fields/R_Q_Contact_Eligible__c.field-meta.xml
<CustomField>
    <fullName>R_Q_Contact_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This values is mapped from Account -- PM-377/PM-378</description>
    <label>R/Q Contact Eligible</label>
    <type>Checkbox</type>
</CustomField>