force-app/main/default/objects/Reporting_Snapshots__c/fields/Reporting_Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Snapshot_Name__c</fullName>
    <description>Name of the current Snapshot -- PM-377/PM-378</description>
    <label>Reporting Snapshot Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>